--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.15",
+    "@mui/system": "^5.11.16",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
+    "modern-normalize": "^1.1.0",
+    "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "4.0.3",
+    "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.6.1",
+    "styled-components": "^5.3.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +45,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "jest-watch-typeahead": "0.6.1"
   }
 }
